src/index.css
@font-face {
    font-family: Gilroy;
    font-display: swap;
    font-weight: 300;
    src: url("fonts/Gilroy-UltraLight.woff2") format('woff2');
}

@font-face {
    font-family: Gilroy;
    font-display: swap;
    font-weight: 400;
    src: url("fonts/Gilroy-Thin.woff2") format('woff2');
}

@font-face {
    font-family: Gilroy;
    font-display: swap;
    font-weight: 600;
    src: url("fonts/Gilroy-Regular.woff2") format('woff2');
}


@font-face {
    font-family: Gilroy;
    font-display: swap;
    font-weight: 700;
    src: url("fonts/Gilroy-Bold.woff2") format('woff2');
}


@font-face {
    font-family: Gilroy;
    font-display: swap;
    font-weight: 900;
    src: url("fonts/Gilroy-Extrabold.woff2") format('woff2');
}


@font-face {
    font-family: HomemadeApple;
    font-display: swap;
    font-weight: 100;
    src: url("fonts/HomemadeApple-Regular.woff2") format('woff2');
}

.container {
    width:1440px;
    margin-left: auto;
    margin-right: auto;
}

body {
    font-family: Gilroy, sans-serif;
}

header div {
    display: flex;
    justify-content: space-between;
    align-items: center;
    gap:30px;
    padding-bottom: 47px;
}

header .logo {
    margin-left: 120px;
    padding-top: 45px;
}

.header-nav ul {
    display: flex;
    gap: 30px;
    margin-left: 110px;
    padding-top: 35px;
}

header >div> button {
    display: flex;
    border-color: #F7941E;
    background-color: transparent;
    color: #F7941E;
    border-radius: 5px;
    font-size: 18px;
    font-family: inherit;
    line-height: 1.2;
    text-align: center;
    left: 500px;
    margin-right: 150px;
    margin-top: 40px;
    padding-left: 25px;
    padding-top: 10px;
}


.logo {
    font-family: HomemadeApple, sans-serif;
    font-style: italic;
    font-size: 18px;
    font-weight: 400;
    line-height: 2.1;
}


.header-nav ul >li> a {
    font-size: 18px;
    line-height: 1.2;
    font-weight: 900;
}

h1 {
    font-size: 56px;
    line-height: 1.2;
    font-weight: 900;
}

h2 {
    font-size: 32px;
    line-height: 0.72;
    font-weight: 600;
}

h3 {
    font-size: 32px;
    line-height: 1.2;
    font-weight: 600;
}

p {
    font-size: 20px;
    line-height: 1.38;
    font-weight: 600;
}

button {
    font-size: 18px;
    text-transform: uppercase;
    font-weight: 100;
    width: 150px;
    height: 43px;
    padding-top: 5px;
}

.find-a-gift {
    background-color: #F1F1F2;;
}

.find-a-gift-wrapper {
    margin-left: 125px;
    margin-right: 170px;
    display: flex;
    max-height: 700px;
}

.text-wrap {
    max-height: 200px;
}

.text-wrap h1 {
    padding-right: 150px;
    padding-top: 60px;
    font-size: 56px;
    line-height: 1.2;
}

.text-wrap p:first-of-type {
    font-size: 20px;
    line-height: 1.4;
    color: black;
    padding-top: 50px;
    padding-right: 150px;
    padding-bottom: 50px;
}

.text-wrap h2 {
    margin-left: 150px;

}

.text-wrap button {
    background-color: transparent;
    color: transparent;
    min-width: 200px;
    height:60px;
}

.text-wrap-2nd h2 {
    padding-top: 50px;
    margin-left: 140px;
    padding-bottom:40px;
}

.text-wrap-2nd p {
    margin-left: 140px;
    padding-bottom: 35px;
}

.text-wrap-2nd button { /* Не пробивает, почему?*/
 color: transparent;
    margin-left: 150px;
    min-width: 200px;
    height:60px;
}

.img-wrap-first img{
    padding-top: 70px;
    max-width: 570px;
    display: flex;
    padding-bottom: 130px;
}

.text-wrap:last-of-type {
    padding-top: 140px;
}

.img-wrap img:last-of-type{
    max-width: 570px;
    display: flex;
    padding-bottom: 130px;
}

.find-a-gift-wrapper button {
    background-color: #F7941E;
    border-radius: 5px;
    color: white;
    border-color: #F7941E;
}


.gifts-occasions h2 {
padding-top: 80px;
    text-align: center;
    margin-right: auto;
    padding-bottom: 30px;
}

.gifts-occasions p {
    padding-left: 120px;
    margin-right: 70px;
    text-align: center;
    padding-bottom: 65px;
}

.gift-cards-wrapper ul {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding-bottom: 137px;
    margin-left: 135px;
    margin-right: 135px;
}


.gifts-occasions a {
    color: #000000;
padding-bottom: 24px;
}

.gift-cards-wrapper ul > li > img {
    width: 270px;
    height: 270px;
    margin-right:30px;
}

.gifts-occasions ul > li {
    background-color: #FAFAFA;
    border: 1px white;
}

.gift-cards-wrapper ul > li:first-of-type{
box-shadow(10px 10px 15px rgba(0, 0, 0, 0.05));
}

.gift-cards-wrapper ul > li > h3 {
    padding-top: 25px;
    padding-bottom: 75px;
    margin-left: 20px;
    font-size: 20px;
    line-height: 1.2;
}

.gifts-occasions ul > li > a {
    font-size: 14px;
    line-height: 1.2;
    font-weight: 600;
    margin-left: 20px;
}

.get-started {
    display: flex;
    background-color: #F7941E;
    height: 240px;
}

.get-started-text-wrapper {
    display: flex;
    max-width: 330px;
    flex-direction: column;
    padding-top: 100px;
    margin-left: 240px;
}

.get-started-button-wrapper {
    margin-top: 125px;
    margin-left:auto;
    margin-right: auto;
    display: flex;
    gap: 16px;
}

.get-started h2 {
    font-weight: 800;
    font-size: 32px;
    line-height: 1.4;
}

.get-started p {
    font-size: 32px;
    line-height: 1.4;
}

.get-started-button-wrapper button:first-of-type {
    width: 200px;
    background-color: black;
    color: white;
    border-color: black;
}

.get-started-button-wrapper button:last-of-type {
    width:200px;
    background-color: transparent;
    color: black;
    border-color: black;
    border-width: 3px;
}

.best-blogs ul > li:first-of-type > h3 {
    color: white;
    font-size: 48px;
}

.best-blogs ul > li:first-of-type {
    background-color: black;
}

.best-blogs ul>li:first-child >h3{
font-size: 48px;
    font-weight: 600;
    line-height: 1.2;
}

.best-blogs ul>li:first-child >p{
    font-size: 14px;
    font-weight: 400;
    line-height: 1.2;
}


.best-blogs ul > li > p > a:first-of-type {
    color: white;
    font-size: 18px;
}

.best-blogs ul > li > a {
    font-size: 14px;
    line-height: 1.2;
    font-weight: 600;
}

.best-blogs h2 {
    padding-top: 108px;
    font-size: 32px;
    line-height: 1.2;
    text-align: center;
    padding-bottom: 25px;
}

.best-blogs h3 {
    font-size: 24px;
    line-height: 1.2;
    text-align: center;
    font-weight: 900;
}
.best-blogs p {
    text-align: center;
    padding-bottom: 70px;
}

.best-blogs ul > li:first-of-type {
    background-color: black;
    color: white;
    height: 370px;
    width: 1170px;

}

.best-blogs img {
    width: 400px;
}


.main-card {
    display: flex;
    max-width: 1170px;
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 40px;
}

.main-card img {
    display: flex;
    flex-direction: column;

}

.card-text-wrapper {
    display: flex;
    max-width: 500px;
    flex-direction: column;
    padding-top: 63px;
    align-items: flex-start;
    margin-left: 100px;
}

.main-card p {
    padding-bottom: 27px;
}

.card-text-wrapper h3 {
    font-size: 48px;
    font-weight: 600;
    align-items: start;
    padding-bottom: 60px;
}

.card-text-wrapper a {
    font-size: 18px;
    font-weight: 600;
    color:white;
    padding-bottom: 40px;
}


.bottom-card {
    padding-top: 40px;
    padding-bottom: 40px;
    display: flex;
    flex-direction:column;
    justify-content: space-between;
    max-width: 570px;
    max-height: 290px;
    gap: 30px;
    box-shadow: 10px 10px 15px rgba(0, 0, 0, 0.05);
}

footer{
    background-color: #FAFAFA;
    padding-top: 190px;
}

footer > nav > ul {
    display: flex;
    gap: 80px;
  margin-left: 410px;
    margin-right: 410px;
    color: black;
    font-size: 14px;
    font-weight: 700;
}

.footer-nav{
    font-size: 14px;
    font-weight: 800;
    color: black;
    padding-bottom: 43px;
    display: flex;
    justify-content: space-evenly;
}

.footer-logo{
    color: #F7941E;
    font-family: HomemadeApple, sans-serif;
}

.footer-social-media-logo {
    display: flex;
    justify-content: space-evenly;
}

/* Selectors*/

/*header nav > ul > li:first-letter {*/
/*    font-size: 30px;*/
/*}*/

/*header nav > ul[title^='li'] {*/
/*    color: fuchsia;*/
/*}*/


/*a[href^="#"]:hover {*/
/*    font-size: 40px;*/
/*}*/

/*[title*='tt'] {*/
/*    font-size: large;*/
/*}*/


/*[href$='more'] {*/
/*    color: darkorchid;*/
/*}*/

/*footer > nav > ul > li > a[href="https://google.com"]:hover {*/
/*    color: chartreuse;*/
/*}*/

/*[title="Get Started"]:focus {*/
/*    font-size: 40px;*/
/*}*/

